# ical-event-generator

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  ical.py  ical.yml  pyproject.toml  reminder-email.txt  requirements.txt  requirements_lock.txt
.github/workflows/: Friday-reminders.yml  Monday-reminders.yml  Sunday-reminders.yml  Thursday-reminders.yml  Tuesday-reminders.yml  Wednesday-reminders.yml
